--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+    font-family: "Open Sans", sans-serif;
 }
 
 ul {
@@ -428,16 +430,29 @@ textarea.field:focus {
     color: #b59f5b;
 }
 
-.trend-list, .post-list {
+.trend-list {
     display: flex;
     flex-wrap: wrap;
 }
 
-.trend-list-item:not(:last-child), .post-list-item:not(:last-child) {
+.post-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.trend-list-item {
     margin-right: 18px;
 }
 
-.trend-list-link, .post-list-link {
+.post-list-item {
+    margin-right: 18px;
+}
+
+.last {
+    margin-right: 0;
+}
+
+.trend-list-link  {
     font-weight: 700;
     font-size: 14px;
     line-height: 40px;
@@ -446,10 +461,22 @@ textarea.field:focus {
     color: #b59f5b;
 }
 
-.trend-list-link:hover, .post-list-link:hover {
+.post-list-link {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 40px;
+    text-transform: uppercase;
+    
+    color: #b59f5b;
+}
+
+.trend-list-link:hover {
     text-decoration: underline;
 }
 
+.post-list-link:hover {
+    text-decoration: underline;
+}
 /* Section Trends End */
 /* Section posts */
 .posts-container {
@@ -496,7 +523,11 @@ textarea.field:focus {
     color: #0f0d0e;
 }
 
-.title-link:hover, .trend-title-link:hover {
+.title-link:hover {
+    color: #b59f5b;
+}
+
+.trend-title-link:hover {
     color: #b59f5b;
 }
 
@@ -661,7 +692,7 @@ textarea.field:focus {
     background-position: center center;
 }
 
-.search-button:hover, .sign-up-button:hover {
+.search-button:hover {
     background-color: #323232;
 }
 
@@ -679,6 +710,10 @@ textarea.field:focus {
     background-color: #b59f5b;
     color: #ffffff;
     cursor: pointer;
+}
+
+.sign-up-button:hover {
+    background-color: #323232;
 }
 
 .tag-list {
@@ -993,7 +1028,8 @@ text-decoration: underline;
     }
 
     .trend-card-container {
-        flex: 1 0 49%;
+        flex: 1;
+        flex-basis: 49%;
         min-height: 247px;
         padding: 15px 19px;
         margin-top: 0;
@@ -1015,7 +1051,7 @@ text-decoration: underline;
     }
 
     .main-section {
-        width: 60%;
+        min-width: 315px;
     }
 
     .main-section-title {
@@ -1074,7 +1110,7 @@ text-decoration: underline;
 
     .side-menu {
         margin-left: 35px;
-        width: 40%;
+        min-width: 209px;
     }
 
     .topic-list-item {
@@ -1184,7 +1220,7 @@ text-decoration: underline;
     .header-content {
         background-image: url("../images/banner-mobile.jpg");
         background-size: cover;
-        background-position: right 35% bottom 15%;
+        background-position: top 37px left 250px;
     }
 
     .header-title-container {
